// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should return DOWN 1`] = `
<DocumentFragment>
  <div
    style="display: contents;"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg ins-c-inventory__detail--down"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should return UP 1`] = `
<DocumentFragment>
  <div
    style="display: contents;"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg ins-c-inventory__detail--up"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should return false 1`] = `
<DocumentFragment>
  <div
    style="display: contents;"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg ins-c-inventory__detail--disabled"
      fill="currentColor"
      height="1em"
      role="img"
      width="1em"
    >
      <svg
        class="pf-v6-icon-default"
        viewBox="0 0 352 512"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
      <svg
        class="pf-v6-icon-rh-ui"
        viewBox="0 0 32 32"
      >
        <path
          d="M28.707 27.293a.999.999 0 1 1-1.414 1.414L16 17.414 4.707 28.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L14.586 16 3.293 4.707a.999.999 0 1 1 1.414-1.414L16 14.586 27.293 3.293a.999.999 0 1 1 1.414 1.414L17.414 16l11.293 11.293Z"
        />
      </svg>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should return true 1`] = `
<DocumentFragment>
  <div
    style="display: contents;"
  >
    <svg
      aria-hidden="true"
      class="pf-v6-svg ins-c-inventory__detail--enabled"
      fill="currentColor"
      height="1em"
      role="img"
      width="1em"
    >
      <svg
        class="pf-v6-icon-default"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
        />
      </svg>
      <svg
        class="pf-v6-icon-rh-ui"
        viewBox="0 0 32 32"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </svg>
  </div>
</DocumentFragment>
`;
